Filtro por ECC - Aptidões - Indicadores

--- a/src/main/webapp/dirigente/ecc.xhtml
+++ b/src/main/webapp/dirigente/ecc.xhtml
@@ -250,7 +250,7 @@
 												 oncomplete="PF('exibiPDF').show()"
 												 disabled="#{eccBean.habilitaBotaoImprimirDirigentes}"
 												 icon="ui-icon-print" value="Anexo27" style="margin-left: 5px;"
-												 title="Imprime a relação dos Dirigentes.."
+												 title="Imprime a relação dos Dirigentes."
 												 ajax="true" update="exibiPDF"/>
 								<p:commandButton id="btnImprimirEquipes" action="#{eccBean.imprimirEquipes}"
 												 oncomplete="PF('exibiPDF').show()"
