--- a/src/main/webapp/dirigente/montagemCirculo.xhtml
+++ b/src/main/webapp/dirigente/montagemCirculo.xhtml
@@ -102,6 +102,12 @@
 							<a style="color: #808080; background: #a0c0de; opacity: 1;
 							filter: alpha(opacity = 100); border-bottom: 3px solid #b1b1b1;">Círculos</a>
 						</li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemCirculosEstudos.png" /><a
+								href="../dirigente/montagemCirculoEstudo.xhtml">Círculos de Estudo</a>
+						</li>
 					</ul>
 				</li>
 			</ul>
