--- a/src/main/webapp/publico/menu.xhtml
+++ b/src/main/webapp/publico/menu.xhtml
@@ -58,7 +58,7 @@
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="usuarios.png" /><a
-								href="usuario.xhtml">Usuários</a>
+								href="../administrador/usuario.xhtml">Usuários</a>
 						</li>
 					</ul>
 				</li>
