--- a/src/main/webapp/dirigente/montagemFicha.xhtml
+++ b/src/main/webapp/dirigente/montagemFicha.xhtml
@@ -614,8 +614,7 @@
 					</h:panelGrid>
 					<!-- ========================= Dados do HOMEM ======================== -->
 					<div>
-								<p:outputLabel value="Dados do Homem" styleClass="negrito"
-								style="margin-left:10px;" />
+					<p:outputLabel value="Dados do Homem" styleClass="negrito" style="margin-left:10px;" />
 					</div>
 					<div id="divDadosHomemEditar" >
 						<div id="divBoxDadosHomemEditar">
@@ -678,8 +677,7 @@
 					<br></br>
 					<!-- ========================= Dados da MULHER ======================== -->
 					<div>
-						<p:outputLabel value="Dados da Mulher" styleClass="negrito"
-									   style="margin-left:10px;" />
+						<p:outputLabel value="Dados da Mulher" styleClass="negrito" style="margin-left:10px;" />
 					</div>
 					<div id="divDadosMulherEditar" >
 						<div id="divBoxDadosMulherEditar">
