--- a/src/main/webapp/dirigente/montagemPalestrante.xhtml
+++ b/src/main/webapp/dirigente/montagemPalestrante.xhtml
@@ -202,9 +202,9 @@
 					</p:column>
 					<p:column headerText="Palestrante" width="350" rendered="#{palestrante.palestra.casal}">
 						<p:outputLabel value="#{palestrante.ficha.primeiraEtapa} - #{palestrante.ficha.nomeUsual}"/>
-						<h:graphicImage library="imagens" value="/image?imagem=#{palestrante.ficha.fotoEla}" rendered="#{palestrante.ficha.fotoEla.length() > 0}"
+						<h:graphicImage library="imagens" value="/image?imagem=#{palestrante.ficha.fotoEla}" rendered="#{palestrante.ecc.situacao eq 'ANDAMENTO'}"
 										style="width:20px; height:20px; float: right;" title="Foto dela"/>
-						<h:graphicImage library="imagens" value="/image?imagem=#{palestrante.ficha.fotoEle}" rendered="#{palestrante.ficha.fotoEle.length() > 0}"
+						<h:graphicImage library="imagens" value="/image?imagem=#{palestrante.ficha.fotoEle}" rendered="#{palestrante.ecc.situacao eq 'ANDAMENTO'}"
 										style="width:20px; height:20px; float: right;" title="Foto dele"/>
 					</p:column>
 
